@@ -1,3 +1,9 @@
+2011-04-25  Pavel Feldman  <pfeldman@google.com>
+
+        Not reviewed: Inspector.json cleanup.
+
+        * inspector/Inspector.json:
+
 2011-04-25  Yury Semikhatsky  <yurys@chromium.org>
 
         Reviewed by Pavel Feldman.
